[project]
name = "regdown"
version = "1.1"
description = "Markdown extension for interactive regulations"
readme = "README.md"
requires-python = ">=3.10"
license = "CC0-1.0"
authors = [
    {name = "CFPB", email = "tech@cfpb.gov" }
]
dependencies = [
    "Markdown>=3.4",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/cfpb/regdown"
"Bug Reports" = "https://github.com/cfpb/regdown/issues"
"Source" = "https://github.com/cfpb/regdown"

[build-system]
requires = ["setuptools>=63", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Use PEP8 line-length
line-length = 79
# Exclude common paths
exclude = [
    ".git",
    ".tox",
    "__pycache__",
]

[tool.ruff.lint]
ignore = []
# Select specific rulesets to use
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.coverage.run]
omit = [
    "tests.py",
]
